# rust-ctl

./: Cargo.toml  README.md  objects.yaml
api/: Cargo.toml  objects.yaml
cli/: Cargo.toml
cli/src/: main.rs
src/: main.rs
