[package]
name = "rust-ctl"
version = "0.1.0"
authors = ["Angel Alonso Fonseca <alonsofonseca.angel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.2"
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
